--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <title>Chmura Work Sample</title>
-  <meta name="description" content="Chmura Work Sample">
+  <title>Basic Vue 3 SPA</title>
+  <meta name="description" content="Basic Vue 3 SPA">
 </head>
 <body>
   <div id="app"></div>
